Fixed video not showing

--- a/assets/sass/_extra.scss
+++ b/assets/sass/_extra.scss
@@ -4096,6 +4096,7 @@ body.home {
     left: 0;
     width: 100%;
     height: auto;
+    transform: scale(1.3);
   }
   .desktop {
     display: none;
